--- a/Dockerfile.kali
+++ b/Dockerfile.kali
@@ -1,16 +1,20 @@
-# PENTEST CONTAINER
+# PENTESTER CONTAINER
 FROM kalilinux/kali-rolling
 
 LABEL maintainer="Vladimir Eliseev <yvv4recon@gmail.com>"
 
+ENV DEBIAN_FRONTEND=noninteractive
+
 RUN apt-get -y update && apt-get -y upgrade && \
-    apt-get install -y kali-linux-core --fix-missing && \
+    apt-get install -y kali-linux-default --fix-missing && \
     apt-get install -y \
     software-properties-common \
     bash-completion git colordiff colortail unzip vim tmux zsh curl telnet strace ltrace tmate && \
     apt-get autoremove -y && \
     apt-get clean
 
+
 RUN mkdir /data
 
+WORKDIR /data
 CMD ["/bin/bash"]
