--- a/Dockerfile.kali
+++ b/Dockerfile.kali
@@ -8,8 +8,9 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN apt-get -y update && apt-get -y upgrade && \
     apt-get install -y kali-linux-default --fix-missing && \
     apt-get install -y \
-    software-properties-common iputils-arping iputils-ping iputils-tracepath \
-    bash-completion git colordiff colortail unzip vim tmux zsh curl telnet strace ltrace tmate && \
+    software-properties-common iputils-arping iputils-ping iputils-tracepath golang \
+    bash-completion git colordiff colortail unzip vim tmux zsh curl telnet strace \
+    ltrace tmate && \
     apt-get autoremove -y && \
     apt-get clean
 
